manifests/templates/kashira.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kashira
  annotations:
    tick: "false"
spec:
  selector:
    matchLabels:
      app: kashira
  serviceName: kashira-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: kashira
    spec:
      serviceAccountName: cluster-admin
      containers:
      - name: kashira-container
        image: core.harbor.domain/katana/kashira:latest
        ports:
        - containerPort: 80
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: kashira-svc
spec:
  clusterIP: None
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
