manifests/templates/mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: katana

spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7 #Change this image to match the version of MySQL you are using
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
          
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-nodeport-svc
  namespace: katana

spec:
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 32001
  selector:
    app: mysql
  type: NodePort
