manifests/templates/web_challenge.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appy
spec:
  selector:
    matchLabels:
      app: appy
  replicas: 1
  template:
    metadata:
      labels:
        app: appy
    spec:
      containers:
      - name: mycontainer
        image: myimage
        ports:
        - name: server
          containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: NodePort
  selector:
    app: appy
  ports:
  - name: server
    protocol: TCP
    port: 3000
    targetPort: 3000
